...
                        android:layout_alignParentStart="true"
                        android:layout_below="@id/tv_menu"
                        android:textSize="21sp"
                        android:textColor="@color/color_almostwhite"/>

                    <Spinner
                        android:id="@+id/spinnerStatus"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/spinner_bg"
                        android:layout_marginStart="50dp"
                        android:layout_alignBaseline="@id/tv_status"
                        android:layout_toEndOf="@id/tv_status"
...
                        android:layout_alignParentStart="true"
                        android:layout_below="@id/spinnerStatus"
                        android:textSize="21sp"
                        android:textColor="@color/color_almostwhite"/>

                    <Spinner
                        android:id="@+id/spinnerTeam"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/spinner_bg"
                        android:layout_marginStart="50dp"
                        android:layout_alignBaseline="@id/tv_team"
                        android:layout_toEndOf="@id/tv_status"
...
